<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_todoList"
                android:icon="@drawable/ic_list"
                android:title="@string/todolist"/>
        <item
                android:id="@+id/nav_eventList"
                android:icon="@drawable/ic_event"
                android:title="@string/eventlist"/>
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                    android:id="@+id/nav_signOut"
                    android:icon="@drawable/ic_exit"
                    android:title="@string/signOut"/>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_info"
                    android:title="@string/about"/>
        </menu>
    </item>

</menu>
