<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:layout_centerVertical="true"
        android:text="@string/date_ex"
         />

    <TextView
        android:id="@+id/tv_event_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/marginItems"
        android:layout_marginLeft="@dimen/marginItems"
        android:layout_toEndOf="@+id/tv_event_date"
        android:layout_toRightOf="@+id/tv_event_date"
        android:text="@string/item_text"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/iv_cross_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_event_text"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:gravity="end"
        app:srcCompat="@android:drawable/btn_dialog"
        android:contentDescription="@string/deletebutton" />
</RelativeLayout>